Refactor project branding by renaming from "Colombo Growth Lab" to "FlowUp" across all components, including updates to HTML, README, and email subject lines. Update logo paths and theme storage key for consistency. Adjust color palette in theme configuration for improved visual identity.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "colombo-growth-lab",
+  "name": "flowup-marketing-digital",
   "private": true,
   "version": "1.0.0",
   "type": "module",
